<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#57b1d1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:src="@drawable/carlos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelas"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/profile_reference_layer"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reference"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_1"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_2"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_3"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_4"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_5"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_6"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_7"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_8"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_9"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_10"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_11"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_12"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_13"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/reference_14"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>